--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/node": "^22.8.5",
     "prisma": "^5.21.1",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3"
